--- a/TrelloWorld/TrelloWorld.Server/Web.config
+++ b/TrelloWorld/TrelloWorld.Server/Web.config
@@ -1,21 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
+  http://go.microsoft.com/fwlink/?LinkId=301880
   -->
-
 <configuration>
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+  </connectionStrings>
+  <appSettings>
+    <add key="Trello.Key" value="your app key" />
+    <add key="Trello.Token" value="your app token" />
+  </appSettings>
 
-<system.webServer>
+  <system.web>
+    <customErrors mode="Off" />
+    <authentication mode="None" />
+    <compilation debug="true" targetFramework="4.5.1" />
+    <httpRuntime targetFramework="4.5.1" maxRequestLength="20480" />
+  </system.web>
+
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
