--- a/TrelloWorld/TrelloWorld.Server/TrelloWorld.Server.csproj
+++ b/TrelloWorld/TrelloWorld.Server/TrelloWorld.Server.csproj
@@ -91,6 +91,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Config.cs" />
+    <Compile Include="Services\ITrelloService.cs" />
     <Compile Include="Services\TrelloService.cs" />
   </ItemGroup>
   <ItemGroup>
