--- a/TrelloWorld/TrelloWorld.Server/Web.config
+++ b/TrelloWorld/TrelloWorld.Server/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,7 @@
   <connectionStrings>
   </connectionStrings>
   <appSettings>
-    <add key="Trello.Key" value="your app key" />
-    <add key="Trello.Token" value="your app token" />
+    <add key="Trello.Key" value="some value" />
   </appSettings>
 
   <system.web>
