Stubbed out the documentaton for the next two steps.

--- a/TrelloWorld/TrelloWorld.Server/TrelloWorld.Server.csproj
+++ b/TrelloWorld/TrelloWorld.Server/TrelloWorld.Server.csproj
@@ -110,6 +110,8 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="MarkdownViews\ConfigureAppKey.md" />
+    <Content Include="MarkdownViews\ConfigurationComplete.md" />
+    <Content Include="MarkdownViews\ConfigureTrelloToken.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
