Wrote documenation for gettign trello token

--- a/TrelloWorld/TrelloWorld.Server/Web.config
+++ b/TrelloWorld/TrelloWorld.Server/Web.config
@@ -9,7 +9,8 @@
   <connectionStrings>
   </connectionStrings>
   <appSettings>
-    <add key="Trello.Key" value="some value" />
+    <add key="Trello.Key" value="some_value" />
+    <!--<add key="Trello.Token" value="some_value" />-->
   </appSettings>
 
   <system.web>
