Updating readme with installation instructions

--- a/TrelloWorld/TrelloWorld.Server/Web.config
+++ b/TrelloWorld/TrelloWorld.Server/Web.config
@@ -9,7 +9,7 @@
   <connectionStrings>
   </connectionStrings>
   <appSettings>
-    <add key="Trello.Key" value="some_value" />
+    <add key="Trello.Key" value="your_app_key" />
     <!--<add key="Trello.Token" value="some_value" />-->
   </appSettings>
 
