--- a/TrelloWorld/TrelloWorld.Server/Web.config
+++ b/TrelloWorld/TrelloWorld.Server/Web.config
@@ -10,7 +10,7 @@
   </connectionStrings>
   <appSettings>
     <add key="Trello.Key" value="your_app_key" />
-    <!--<add key="Trello.Token" value="some_value" />-->
+    <add key="Trello.Token" value="some_value" />
   </appSettings>
 
   <system.web>
