--- a/TrelloWorld/TrelloWorld.Server.Tests/packages.config
+++ b/TrelloWorld/TrelloWorld.Server.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="RestSharp" version="104.1" targetFramework="net45" />
   <package id="TrelloNet" version="0.6.2" targetFramework="net45" />
