--- a/TrelloWorld/TrelloWorld.Server/packages.config
+++ b/TrelloWorld/TrelloWorld.Server/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="RestSharp" version="104.1" targetFramework="net45" />
   <package id="TrelloNet" version="0.6.2" targetFramework="net45" />
 </packages>
