--- a/TrelloWorld/TrelloWorld.Server.Tests/TrelloWorld.Server.Tests.csproj
+++ b/TrelloWorld/TrelloWorld.Server.Tests/TrelloWorld.Server.Tests.csproj
@@ -35,7 +35,7 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -76,7 +76,12 @@
     <Compile Include="Services\TrelloServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SampleData\CommitOnBranch2.json" />
+    <None Include="SampleData\CommitOnMaster.json" />
+    <None Include="SampleData\MultipleCommitsOnMaster.json" />
     <None Include="TrelloWorld.Server.Tests.csproj.vsspell" />
   </ItemGroup>
   <ItemGroup>
