--- a/TrelloWorld/TrelloWorld.Server/TrelloWorld.Server.csproj
+++ b/TrelloWorld/TrelloWorld.Server/TrelloWorld.Server.csproj
@@ -128,6 +128,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Models\Commit.cs" />
+    <Compile Include="Services\ICommitParser.cs" />
     <Compile Include="Services\ITrelloController.cs" />
     <Compile Include="Controllers\TrelloController.cs" />
     <Compile Include="Global.asax.cs">
