Include options in config file

--- a/TrelloWorld/TrelloWorld.Server/Web.config
+++ b/TrelloWorld/TrelloWorld.Server/Web.config
@@ -9,10 +9,13 @@
   <connectionStrings>
   </connectionStrings>
   <appSettings>
-  <!--
+    <!--
     <add key="Trello.Key" value="your_app_key" />
     <add key="Trello.Token" value="some_value" />
     -->
+    <add key="Trello.Branches" value="master"/>
+    <add key="Trello.IncludeCardId" value="false"/>
+    <add key="Trello.IncludeLinkToCommit" value ="true"/>
   </appSettings>
 
   <system.web>
